--- a/springboot_backend/website_backend/src/main/resources/application.properties
+++ b/springboot_backend/website_backend/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=website_backend
 # Database Configuration (MySQL)
-#spring.datasource.url=jdbc:mysql://shortline.proxy.rlwy.net:45739/railway
+#spring.datasource.url=jdbc:
 #spring.datasource.username=root
-#spring.datasource.password=VJnXliWtJmiLQUXOpfimIvKfZgBnjDIH
+#spring.datasource.password=
 
 spring.datasource.url=jdbc:mysql://localhost:3306/website_backend
 spring.datasource.username=root
-spring.datasource.password=FbaMo043004$%^
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
